--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>портфолио</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-    @import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto&display=swap');
-    </style>
+      <style>
+          @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap&subset=cyrillic,cyrillic-ext,latin-ext');
+      </style>
 
   </head>
    <body>
@@ -24,21 +24,39 @@
       </div>
     </header>
     <main>
-      <div class="video-card"> 
-        <div class="video-bg">
-          <video height="1058px" autoplay muted loop>
+      <div class="video-card">
+          <div class="video-bg">
+          <video height="1058px" object-fit="contain" autoplay muted loop>
             <source src="res/vid1.mp4" type="video/mp4"></source>
           </video>
         </div>
-      <div class="card">
-      <h1>Orekh</h1> <h3>Industrial Designer</h3>
-    </div>
-  </div>
+          <div class="card">
+              <h1>Orekh</h1> <h3>Industrial Designer</h3>
+              </div>
+          <div class="arrow">
+              <svg viewBox="0 0" width="40" height="18">
+              <polyline points="0,0 20,18 40,0" style="fill:none;stroke:white;stroke-width:2"/>
+              </svg>
+          </div>
+      </div>
+      <div class="b1">
+            <img class="avatar" align="middle" src="res/noroot.jpg" alt="фотография" height="150px" >
+        <h2>Здравствуйте! Меня зовут Мария Плужник и я промышленный дизайнер из Москвы.
+        </h2>
+          <div> </div>
+        <p>Я окончила МГХПА им. Строганова по специальности Промышленный дизайн.
+Мой опыт работы - около 3 лет.
+Моя сильная сторона - понимание технологических процессов при создании изделия. В проектах пластиковых изделий, созданных мной, не будет поднутрений, мешающих съему формы, будут предусмотрены уклоны. Я разрабатывала изделия для литья под давлением, токарной и фрезерной обработки, вакуумной формовки, 3d-печати. При этом изделие будет эстетичным и эргономичным.
+
+Как правило, я разрабатываю внешнюю форму изделия, однако в некоторых случаях могу выполнить и внутреннюю проработку (создать ребра для поддержки плат, задать толщину...)
+        </p>
+        <div class="button"><a href="">Мое портфолио</a></div>
+
+      </div>
 
     </main>
     <footer>
     </footer>
   </body>
 </html>
-
 
