--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
       <div class="video-card">
           <div class="video-bg">
-          <video height="1058px" object-fit="contain" autoplay muted loop>
+          <video height="1058px" autoplay muted loop>
             <source src="res/vid1.mp4" type="video/mp4"></source>
           </video>
         </div>
@@ -41,16 +41,22 @@
       </div>
       <div class="b1">
             <img class="avatar" align="middle" src="res/noroot.jpg" alt="фотография" height="150px" >
-        <h2>Здравствуйте! Меня зовут Мария Плужник и я промышленный дизайнер из Москвы.
-        </h2>
-          <div> </div>
-        <p>Я окончила МГХПА им. Строганова по специальности Промышленный дизайн.
-Мой опыт работы - около 3 лет.
-Моя сильная сторона - понимание технологических процессов при создании изделия. В проектах пластиковых изделий, созданных мной, не будет поднутрений, мешающих съему формы, будут предусмотрены уклоны. Я разрабатывала изделия для литья под давлением, токарной и фрезерной обработки, вакуумной формовки, 3d-печати. При этом изделие будет эстетичным и эргономичным.
 
-Как правило, я разрабатываю внешнюю форму изделия, однако в некоторых случаях могу выполнить и внутреннюю проработку (создать ребра для поддержки плат, задать толщину...)
+            <h2>Здравствуйте! Меня зовут Мария Плужник и&nbsp;я&nbsp;промышленный дизайнер из&nbsp;Москвы.
+            </h2>
+            <div> </div>
+            <p>Я окончила МГХПА им.&nbsp;Строганова по&nbsp;специальности Промышленный дизайн.
+Мой&nbsp;опыт работы - около 3&nbsp;лет.
+Моя&nbsp;сильная сторона&nbsp;- понимание технологических процессов при&nbsp;создании изделия. В&nbsp;проектах пластиковых изделий, созданных мной, не&nbsp;будет поднутрений, мешающих съему формы, будут предусмотрены уклоны. Я&nbsp;разрабатывала изделия для&nbsp;литья под&nbsp;давлением, токарной и&nbsp;фрезерной обработки, вакуумной формовки, 3d-печати. При&nbsp;этом изделие будет эстетичным и&nbsp;эргономичным.
+
+Как&nbsp;правило, я&nbsp;разрабатываю внешнюю форму изделия, однако в&nbsp;некоторых случаях могу выполнить и&nbsp;внутреннюю проработку (создать ребра для&nbsp;поддержки плат, задать толщину...)
         </p>
+
         <div class="button"><a href="">Мое портфолио</a></div>
+
+      </div>
+      <div class="b2">
+          <h2>Мои навыки:</h2>
 
       </div>
 
