--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </video>
         </div>
           <div class="card">
-              <h1>Orekh</h1> <h3>Industrial Designer</h3>
+              <h1>Orekh</h1> <h4>Industrial Designer</h4>
               </div>
           <div class="arrow">
               <svg viewBox="0 0" width="40" height="18">
@@ -57,7 +57,42 @@
       </div>
       <div class="b2">
           <h2>Мои навыки:</h2>
-
+          <div class="skill-table">
+              <div class="skill">
+                   <img src="icons\3d.svg" alt="">
+                   <h3>3d&nbsp;моделирование</h3>
+                  <p>Я&nbsp;работаю в&nbsp;<b>Fusion 360, Catia (в&nbsp;том&nbsp;числе скрипты), Rhinoceross+Grasshopper, 3ds&nbsp;Max.</b> Сейчас я&nbsp;изучаю <b>Solidworks</b> для&nbsp;физической симуляции.</p>
+          </div>
+              <div class="skill">
+                  <img src="icons\rend.svg" alt="">
+                  <h3>Рендеринг</h3>
+                  <p>Я использую рендеры <b>Corona, Keyshot, V-Ray</b> и&nbsp;<b>Fusion&nbsp;360.</b></p>
+              </div>
+              <div class="skill">
+                  <img src="icons\protot.svg" alt="">
+                  <h3>Прототипирование</h3>
+                  <p>Я&nbsp;интересуюсь <b>3d&nbsp;печатью</b> и&nbsp;имею свой 3d&nbsp;принтер. Я&nbsp;умею пользоваться технологиями 3d&nbsp;печати <b>FDM</b> и&nbsp;<b>SLA</b>, а&nbsp;также имею опыт работы с&nbsp;<b>пеноплексом</b> и&nbsp;<b>лазерным резаком.</b>
+                  </p>
+              </div>
+          </div>
+          <div class="divider"></div>
+          <div class="skill-table">
+              <div class="skill">
+                  <img src="icons\eng.svg" alt="">
+                  <h3>Английский язык</h3>
+                  <p>Я&nbsp;хорошо понимаю быструю английскую речь и&nbsp;могу разговаривать на&nbsp;английском языке. Имею опыт деловых переговоров с&nbsp;британскими и&nbsp;китайскими партнерами.</p>
+              </div>
+              <div class="skill">
+                  <img src="icons\graph.svg" alt="">
+                  <h3>Графический дизайн и иллюстрация</h3>
+                  <p>Я&nbsp;могу разработать упаковку и&nbsp;логотип для&nbsp;вашего продукта. Я&nbsp;работаю в&nbsp;<b>Adobe Illustrator, Adobe Photoshop, Corel Draw.</b> Кроме того, я&nbsp;рисую в&nbsp;<b>Sai</b> и&nbsp;иногда пишу маслом на&nbsp;холсте.</p>
+              </div>
+              <div class="skill">
+                  <img src="icons\motion.svg" alt="">
+                  <h3>Моушн-дизайн</h3>
+                  <p>Я&nbsp;работаю в&nbsp;<b>Adobe After Effects</b> и&nbsp;<b>Adobe Premiere.</b></p>
+              </div>
+          </div>
       </div>
 
     </main>
